--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 html{height:100%;}
 body{
-background-image:url(картинки/fon.jpg);
+background-image:url(image/fon.jpg);
 background-position:center top;
 background-repeat:no-repeat;
 background-attachment:fixed;
